``repoze.profile`` Changelog
============================

1.3 (2011-09-30)
----------------

- Added an option to filter profile output by filename.  Thanks to Shish
  for the patch.

- Put a lock around "index" method in order to prevent exceptions when trying
  to view profile data as it's being generated.  Closes
  http://bugs.repoze.org/issue168.

- Removed these dependencies: ``meld3``, ``paste``.

- A new ``paste.filter_app_factory`` entry point has been added named
  ``main`` which points to the profiler.  This allows for the simplified
  spelling ``egg:repoze.profile`` in paste.ini files when referring to the
  profile middleware (instead of the older, more verbose
  ``egg:repoze.profile#profiler``.  The older alias continues to work as
  well.

- The new canonical import location for the profiling middleware is
  ``repoze.profile.ProfileMiddleware``.  Older imports continue to work.

- Remove ez_setup.py.

- Python 3.2 compatibility.

1.2 (2010-11-25)
----------------

- Converted documentation to Sphinx.

- Ensure we consume generators returned by the wrapped application.
  Fixes http://bugs.repoze.org/issue169 

1.1 (2009-10-06)
----------------

- 100% test coverage.

- Get rid of spurious measurements of testing scaffolding in profile
  output (show no calls that are inside r.profile itself).

1.0 (2009-06-04)
----------------

- Relax the pinned requirement on elementtree < 1.2.7.

0.9 (2009-05-10)
----------------

- Made the `pyprof2calltree` dependency conditional on the Python version.
  This package depends on Python >= 2.5.

0.8 (2009-02-25)
----------------

- Added optional support for directly writing out the profiling data in the
  KCacheGrind format.

- Avoid a dependency on `elementtree` when used with Python 2.5 and later.
  In those Python versions we used the built-in xml.etree support.

0.7 (2009-02-08)
----------------

- ``discard_first_request = true`` did not work!
